@@ -1,3 +1,8 @@
+2007-09-11  Dave Lehman  <dlehman@redhat.com>
+
+	* src/system-config-kdump.py: warn users that a PAE kernel is required
+	for 32-bit xen w/ >4G memory (#284851, patch from Jarod Wilson)
+
 2007-08-29  Dave Lehman  <dlehman@redhat.com>
 
 	* system-config-kdump.spec: bump version, update changelog.
